# KafkaClient

./: .gitattributes  .gitignore  README.md  permission.cmd
IkvmKafkaClient/: IkvmKafkaClient.sln
IkvmKafkaClient/Consumer/: Consumer.csproj  Program.cs
IkvmKafkaClient/Consumer/Properties/: AssemblyInfo.cs
IkvmKafkaClient/Producer/: Producer.csproj  Program.cs  StatUtils.cs
IkvmKafkaClient/Producer/Properties/: AssemblyInfo.cs
KafkaClient/: KafkaClient.sln  cleanup-dir.cmd  rebuild.cmd
KafkaClient/Consumer/: Consumer.cs  Consumer.csproj  ConsumerEntryPoint.cs  Program.cs
KafkaClient/Consumer/Properties/: AssemblyInfo.cs
KafkaClient/KafkaClient/: Config.cs  Consumer.cs  KafkaClient.csproj  Program.cs  WebRequestHelper.cs  XTask.cs  packages.config
KafkaClient/KafkaClient/Logging/: Log4NetConfigurator.cs  log4net.config
KafkaClient/KafkaClient/Properties/: AssemblyInfo.cs
KafkaClient/Publisher/: App.config  Program.cs  Publisher.csproj  PublisherEntryPoint.cs  TestPublisher.cs  packages.config
KafkaClient/Publisher/Properties/: AssemblyInfo.cs
KafkaClient/RdKafkaTest/: Program.cs  RdKafkaTest.csproj  packages.config
KafkaClient/RdKafkaTest/Properties/: AssemblyInfo.cs
KafkaClient/TestPublisher/: TestPublisher.cs  TestPublisher.csproj
KafkaClient/TestPublisher/Properties/: AssemblyInfo.cs
cassandra/: Vagrantfile
cassandra/provision/: site.yml
cassandra/provision/tasks/: dependencies.yml  dsc-install.yml  java-install.yml  repositories.yml  start-cassandra.yml
cassandra/provision/templates/: cassandra.yaml
confluent/: Vagrantfile  bootstrap.sh  create-topic.sh  kafka-rest.properties  start-confluent.sh
kafka/: Vagrantfile  bootstrap.sh  kafka-run-class.sh  server.properties  start-kafka.sh
kafka-cluster/: Vagrantfile  bootstrap.sh  start-kafka.sh
kafka08-test/: Vagrantfile  bench-end-to-end-latency.sh  bench-producer.sh  benchmark.sh  bootstrap.sh  kafka-run-class.sh  start-kafka.sh
kafka08-test/benchmark/: create-topic.sh  test-consumer.sh  test-producer-consumer.sh
kafka08-test/config/: log4j.properties  server.properties  test-log4j.properties
librdkafka_test/: CMakeLists.txt  build.bat  cmake_from_kafka_vcxproj.py
librdkafka_test/RdKafka/: RdKafka.sln
librdkafka_test/RdKafka/RdKafka/: Internal.cs  KafkaEnums.cs  Program.cs  RdKafka.csproj  StatUtils.cs
librdkafka_test/RdKafka/RdKafka/Properties/: AssemblyInfo.cs
librdkafka_test/RdKafka/TestConsumer/: Program.cs  TestConsumer.csproj
librdkafka_test/RdKafka/TestConsumer/Properties/: AssemblyInfo.cs
librdkafka_test/RdKafka/TestEndToEndLatency/: Program.cs  TestEndToEndLatency.csproj  packages.config
librdkafka_test/RdKafka/TestEndToEndLatency/Properties/: AssemblyInfo.cs
librdkafka_test/RdKafka/TestProducer/: Program.cs  StatUtils.cs  TestProducer.csproj
librdkafka_test/RdKafka/TestProducer/Properties/: AssemblyInfo.cs
librdkafka_test/built_with_cmake/librdkafka/: CMakeLists.txt
librdkafka_test/built_with_cmake/test_consumer/: CMakeLists.txt  main.c
librdkafka_test/librd/: CMakeLists.txt
librdkafka_test/test_consumer/: CMakeLists.txt  main.c
librdkafka_test/test_producer/: CMakeLists.txt  main.c
librdkafka_test/unix_test/: Vagrantfile  bootstrap.sh
test_scripts/: create-topic.bat  test-consumer.bat  test-latency.bat  test-producer-consumer.bat  test-producer.bat
