
cmake_minimum_required (VERSION 2.6)
project(librdkafka)

include_directories(../external/include)

add_library(librdkafka SHARED
   ../librdkafka/src/queue.h
../librdkafka/src/rdatomic.h
../librdkafka/src/rdavg.h
../librdkafka/src/rdendian.h
../librdkafka/src/rdgz.h
../librdkafka/src/rdinterval.h
../librdkafka/src/rdkafka_assignor.h
../librdkafka/src/rdkafka_buf.h
../librdkafka/src/rdkafka_cgrp.h
../librdkafka/src/rdkafka_conf.h
../librdkafka/src/rdkafka_feature.h
../librdkafka/src/rdkafka_op.h
../librdkafka/src/rdkafka_partition.h
../librdkafka/src/rdkafka_pattern.h
../librdkafka/src/rdkafka_queue.h
../librdkafka/src/rdkafka_request.h
../librdkafka/src/rdkafka_subscription.h
../librdkafka/src/rdlist.h
../librdkafka/src/rdposix.h
../librdkafka/src/rd.h
../librdkafka/src/rdaddr.h
../librdkafka/src/rdcrc32.h
../librdkafka/src/rdkafka.h
../librdkafka/src/rdkafka_broker.h
../librdkafka/src/rdkafka_int.h
../librdkafka/src/rdkafka_msg.h
../librdkafka/src/rdkafka_offset.h
../librdkafka/src/rdkafka_proto.h
../librdkafka/src/rdkafka_timer.h
../librdkafka/src/rdkafka_topic.h
../librdkafka/src/rdkafka_transport.h
../librdkafka/src/rdlog.h
../librdkafka/src/rdrand.h
../librdkafka/src/rdsysqueue.h
../librdkafka/src/rdtime.h
../librdkafka/src/rdtypes.h
../librdkafka/src/snappy.h
../librdkafka/src/snappy_compat.h
../librdkafka/src/tinycthread.h
../librdkafka/src/rdwin32.h
../librdkafka/src/win32_config.h
../librdkafka/src/rdaddr.c
../librdkafka/src/rdcrc32.c
../librdkafka/src/rdgz.c
../librdkafka/src/rdkafka.c
../librdkafka/src/rdkafka_assignor.c
../librdkafka/src/rdkafka_broker.c
../librdkafka/src/rdkafka_cgrp.c
../librdkafka/src/rdkafka_conf.c
../librdkafka/src/rdkafka_msg.c
../librdkafka/src/rdkafka_offset.c
../librdkafka/src/rdkafka_op.c
../librdkafka/src/rdkafka_partition.c
../librdkafka/src/rdkafka_pattern.c
../librdkafka/src/rdkafka_queue.c
../librdkafka/src/rdkafka_range_assignor.c
../librdkafka/src/rdkafka_roundrobin_assignor.c
../librdkafka/src/rdkafka_request.c
../librdkafka/src/rdkafka_subscription.c
../librdkafka/src/rdkafka_timer.c
../librdkafka/src/rdkafka_topic.c
../librdkafka/src/rdkafka_transport.c
../librdkafka/src/rdkafka_buf.c
../librdkafka/src/rdkafka_feature.c
../librdkafka/src/rdlist.c
../librdkafka/src/rdlog.c
../librdkafka/src/rdrand.c
../librdkafka/src/snappy.c
../librdkafka/src/tinycthread.c
)

target_link_libraries(librdkafka 
    ../../external/lib/ssleay32MT
    ../../external/lib/libeay32MT
    ../../external/lib/zdll
)
