cmake_minimum_required (VERSION 2.6)
project(librdkafka)

include_directories(../external/include)

add_library(librdkafka SHARED
    queue.h
    rd.h
    rdaddr.c
    rdaddr.h
    rdatomic.h
    rdavg.h
    rdcrc32.c
    rdcrc32.h
    rdendian.h
    rdgz.c
    rdgz.h
    rdinterval.h 
    rdkafka.c
    rdkafka.h
    rdkafka_assignor.c
    rdkafka_assignor.h
    rdkafka_broker.c
    rdkafka_broker.h
    rdkafka_buf.c
    rdkafka_buf.h
    rdkafka_cgrp.c
    rdkafka_cgrp.h
    rdkafka_conf.c
    rdkafka_conf.h
    rdkafka_int.h
    rdkafka_msg.c
    rdkafka_msg.h
    rdkafka_offset.c
    rdkafka_offset.h
    rdkafka_op.c
    rdkafka_op.h
    rdkafka_partition.c
    rdkafka_partition.h
    rdkafka_pattern.c
    rdkafka_pattern.h
    rdkafka_proto.h
    rdkafka_queue.c
    rdkafka_queue.h
    rdkafka_range_assignor.c
    rdkafka_request.c
    rdkafka_request.h
    rdkafka_roundrobin_assignor.c
    rdkafka_subscription.c
    rdkafka_subscription.h 
    rdkafka_timer.c
    rdkafka_timer.h
    rdkafka_topic.c
    rdkafka_topic.h
    rdkafka_transport.c
    rdkafka_transport.h
    rdkafka_transport_int.h
    rdlist.c
    rdlist.h
    rdlog.c
    rdlog.h
    rdposix.h
    rdrand.c
    rdrand.h
    rdsysqueue.h
    rdtime.h
    rdtypes.h
    rdwin32.h
    snappy.c
    snappy.h
    snappy_compat.h
    tinycthread.c
    tinycthread.h
    win32_config.h
)

target_link_libraries(librdkafka 
    ../../external/lib/ssleay32MT
    ../../external/lib/libeay32MT
    ../../external/lib/zdll
)
